--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-langchain==0.1.0
-langchain-openai==0.0.5
-langchain-community==0.0.10
-psycopg2-binary==2.9.9
-sqlalchemy==2.0.23
-pgvector==0.2.4
-pydantic==2.5.0
-python-dotenv==1.0.0
-matplotlib==3.8.2
-numpy==1.25.2
-pandas==2.1.4
+fastapi
+uvicorn[standard]
+langchain
+langchain-openai
+langchain-community
+psycopg2-binary
+sqlalchemy
+pgvector
+pydantic
+python-dotenv
+matplotlib
+numpy
+pandas
