feat: langchain ai service

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
 fastapi
-uvicorn[standard]
-langchain
-langchain-openai
-langchain-community
-psycopg2-binary
+uvicorn
 sqlalchemy
-pgvector
-pydantic
+psycopg2-binary
 python-dotenv
-matplotlib
-numpy
-pandas
+langchain
+langchain-core
+langgraph
+langsmith
