--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,29 +6,62 @@ on:
       - master
 
 jobs:
-  deploy:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout código
         uses: actions/checkout@v4
 
-      - name: Copiar arquivos para o VPS
-        uses: appleboy/scp-action@v0.1.7
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
-          source: "."
-          target: "/opt/gomech/gomech-ai-service"
+      - name: Configurar Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      - name: Reiniciar containers no VPS
-        uses: appleboy/ssh-action@v0.1.10
+      - name: Login no Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build e Push da imagem
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: deyvidjesus/gomech-ai-service:latest
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build-and-push
+
+    steps:
+      - name: Pré-instalar drone-ssh (cache local)
+        run: |
+          echo "Baixando binário drone-ssh para evitar travamento..."
+          wget -q https://github.com/appleboy/drone-ssh/releases/download/v1.7.7/drone-ssh-1.7.7-linux-amd64 -O /usr/local/bin/drone-ssh
+          chmod +x /usr/local/bin/drone-ssh
+          echo "✅ drone-ssh instalado com sucesso."
+
+      - name: Testar conectividade com VPS
+        run: |
+          echo "🔍 Testando acesso à VPS (${HOST})..."
+          nc -zv ${{ secrets.HOST }} 22 || echo "⚠️ Porta 22 inacessível, verifique firewall ou IP."
+
+      - name: SSH na VPS e atualizar container
+        uses: appleboy/ssh-action@v1.1.0
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
+          port: 22
+          timeout: 120s
+          command_timeout: 15m
+          debug: true
           script: |
+            echo "🚀 Iniciando atualização do GoMech..."
             cd /opt/gomech
-            docker compose down
-            docker compose up -d --build
+            echo "📦 Atualizando imagens..."
+            docker compose pull
+            echo "♻️ Reiniciando containers..."
+            docker compose up -d
+            echo "✅ Deploy concluído com sucesso."
